--- a/html파일/mbti_result_js.html
+++ b/html파일/mbti_result_js.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MBTI SIMPLE TEST</title>
     <!-- 외부 스타일시트 연결 -->
-<link rel="stylesheet" href="mbti_result_js.css">
+<link rel="stylesheet" href="../css파일/mbti_result_js.css">
 </head>
 <body>
     <!-- 메인 컨테이너 시작 -->
@@ -13,12 +13,12 @@
         <!-- 네비게이션 바 시작 -->
         <div class="navbar">
             <div class="navbar-left">
-                <img src="image/Logo_image.png" alt="DSU MBTI 로고" class="logo">
+                <img src="../image/Logo_image.png" alt="DSU MBTI 로고" class="logo">
             </div>
             <div class="navbar-center">
                 <ul class="nav-menu">
-                    <li><a href="mbti_fin.html">Home</a></li>
-                    <li><a href="mbti_result_js.html">Result</a></li>
+                    <li><a href="../html파일/mbti_fin_js.html">Home</a></li>
+                    <li><a href="../html파일/mbti_result_js.html">Result</a></li>
                     <li><a href="">About MBTI</a></li>
                 </ul>
             </div>
@@ -36,10 +36,10 @@
                 <div id="result-detail" class="right-content"></div>
             </div>
             <div class="button-wrap">
-                <a href="mbti_fin.html" class="btn-home">Home</a>
+                <a href="../html파일/mbti_fin_js.html" class="btn-home">Home</a>
             </div>
     </div>
 <!-- 메인 컨테이너 끝 -->
-<script src="mbti_result.js"></script>
+<script src="../js파일/mbti_result.js"></script>
 </body>
 </html>
