--- a/html파일/mbti_test.html
+++ b/html파일/mbti_test.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MBTI SIMPLE TEST</title>
     <!-- 외부 스타일시트 연결 -->
-<link rel="stylesheet" href="mbti_test.css">
+<link rel="stylesheet" href="../css파일/mbti_test.css">
 </head>
 <body>
     <!-- 메인 컨테이너 시작 -->
@@ -13,7 +13,7 @@
         <!-- 네비게이션 바 시작 -->
         <div class="navbar">
             <div class="navbar-left">
-                <img src="image/Logo_image.png" alt="DSU MBTI 로고" class="logo">
+                <img src="../image/Logo_image.png" alt="DSU MBTI 로고" class="logo">
             </div>
             <div class="navbar-center">
                 <ul class="nav-menu">
@@ -29,7 +29,7 @@
         <!-- 메인 콘텐츠 -->
         <div class="main-content">
             <!-- 좌측 메인 콘텐츠 -->
-            <img class="left-content" src = "image/I vs E_1.png" alt = "I와 E 구분 질문1">
+            <img class="left-content" src = "../image/I vs E_1.png" alt = "I와 E 구분 질문1">
             <!-- 우측 메인 콘텐츠 -->
             <div class="right-content">
                 <div class="question" id="q1">
