--- a/html파일/mbti_result_js.html
+++ b/html파일/mbti_result_js.html
@@ -19,7 +19,7 @@
                 <ul class="nav-menu">
                     <li><a href="../html파일/mbti_fin_js.html">Home</a></li>
                     <li><a href="../html파일/mbti_result_js.html">Result</a></li>
-                    <li><a href="">About MBTI</a></li>
+                    <li><a href="" id="update_yet">About MBTI</a></li>
                 </ul>
             </div>
             <!-- navbar flex 비율 맞추기 위한 블럭 -->
