호스팅중 첫페이지 index.html 로 파일명 변경

--- a/html파일/index.html
+++ b/html파일/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title> MBTI SIMPLE TEST</title>
 <!-- 외부 스타일시트 연결 -->
-<link rel="stylesheet" href="../css파일/mbti_fin.css">
+<link rel="stylesheet" href="../css파일/index.css">
 </head>
 <body>
 <!-- 메인 컨테이너 시작 -->
@@ -16,7 +16,7 @@
             </div>
             <div class="navbar-center">
                 <ul class="nav-menu">
-                    <li><a href="../html파일/mbti_fin_js.html">Home</a></li>
+                    <li><a href="../html파일/index.html">Home</a></li>
                     <li><a href="../html파일/mbti_result_js.html" id="result-bool">Result</a></li>
                     <li><a href="" id="update_yet">About MBTI</a></li>
                 </ul>
@@ -28,7 +28,7 @@
         <!-- 메인 콘텐츠 -->
         <div class="main-content">
             <!-- 좌측 메인 콘텐츠 -->
-            <img class="left-content" src="../image/mbti_fin.png" alt="MBTI 지표">
+            <img class="left-content" src="../image/index.png" alt="MBTI 지표">
             <!-- 우측 메인 콘텐츠 -->
             <div class="right-content">
                 <h1>Find your MBTI<br>in munuites!</h1>
