--- a/html파일/mbti_result_fail_js.html
+++ b/html파일/mbti_result_fail_js.html
@@ -17,7 +17,7 @@
             </div>
             <div class="navbar-center">
                 <ul class="nav-menu">
-                    <li><a href="../html파일/mbti_fin_js.html">Home</a></li>
+                    <li><a href="../html파일/index.html">Home</a></li>
                     <li><a href="../html파일/mbti_test_js.html">Result</a></li>
                     <li><a href="" id="update_yet">About MBTI</a></li>
                 </ul>
@@ -37,7 +37,7 @@
             </div>
             <div class="button-wrap">
                 <a href="../html파일/mbti_test_js.html" class="btn" id="resumeBtn">하던 질문지로 돌아가기</a>
-                <a href="../html파일/mbti_fin_js.html" class="btn">시작 페이지로 돌아가기</a>
+                <a href="../html파일/index.html" class="btn">시작 페이지로 돌아가기</a>
             </div>
         </div>
     </div>
