--- a/html파일/mbti_result_js.html
+++ b/html파일/mbti_result_js.html
@@ -17,7 +17,7 @@
             </div>
             <div class="navbar-center">
                 <ul class="nav-menu">
-                    <li><a href="../html파일/mbti_fin_js.html">Home</a></li>
+                    <li><a href="../html파일/index.html">Home</a></li>
                     <li><a href="../html파일/mbti_result_js.html">Result</a></li>
                     <li><a href="" id="update_yet">About MBTI</a></li>
                 </ul>
@@ -36,7 +36,7 @@
                 <div id="result-detail" class="right-content"></div>
             </div>
             <div class="button-wrap">
-                <a href="../html파일/mbti_fin_js.html" class="btn-home">Home</a>
+                <a href="../html파일/index.html" class="btn-home">Home</a>
             </div>
     </div>
 <!-- 메인 컨테이너 끝 -->
