--- a/html파일/mbti_test_js.html
+++ b/html파일/mbti_test_js.html
@@ -17,7 +17,7 @@
             </div>
             <div class="navbar-center">
                 <ul class="nav-menu">
-                    <li><a href="../html파일/mbti_fin_js.html">Home</a></li>
+                    <li><a href="../html파일/index.html">Home</a></li>
                     <li><a href="../html파일/mbti_test_js.html">Result</a></li>
                     <li><a href="" id="update_yet">About MBTI</a></li>
                 </ul>
