--- a/html/mbti_result_fail_js.html
+++ b/html/mbti_result_fail_js.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MBTI SIMPLE TEST</title>
     <!-- 외부 스타일시트 연결 -->
-<link rel="stylesheet" href="../css파일/mbti_result_fail_js.css">
+<link rel="stylesheet" href="css/mbti_result_fail_js.css">
 </head>
 <body>
     <!-- 메인 컨테이너 시작 -->
@@ -13,12 +13,12 @@
         <!-- 네비게이션 바 시작 -->
         <div class="navbar">
             <div class="navbar-left">
-                <img src="../image/Logo_image.png" alt="DSU MBTI 로고" class="logo">
+                <img src="image/Logo_image.png" alt="DSU MBTI 로고" class="logo">
             </div>
             <div class="navbar-center">
                 <ul class="nav-menu">
-                    <li><a href="../html파일/index.html">Home</a></li>
-                    <li><a href="../html파일/mbti_test_js.html">Result</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="mbti_test_js.html">Result</a></li>
                     <li><a href="" id="update_yet">About MBTI</a></li>
                 </ul>
         </div>
@@ -28,7 +28,7 @@
         <!-- 네비게이션 바 끝 -->
     <!-- 메인 콘텐츠 -->
     <div class="main-content">
-        <img id="fail-img" class="left-content" src="../image/result_fail.png" alt="MBTI result fail 페이지">
+        <img id="fail-img" class="left-content" src="image/result_fail.png" alt="MBTI result fail 페이지">
         <!-- 우측 콘텐츠 -->
         <div class="right-content">
             <div class="information">
@@ -36,8 +36,8 @@
                 <p> 결과를 확인하시려면 테스트를 먼저 완료하셔야 합니다.</p>
             </div>
             <div class="button-wrap">
-                <a href="../html파일/mbti_test_js.html" class="btn" id="resumeBtn">하던 질문지로 돌아가기</a>
-                <a href="../html파일/index.html" class="btn">시작 페이지로 돌아가기</a>
+                <a href="mbti_test_js.html" class="btn" id="resumeBtn">하던 질문지로 돌아가기</a>
+                <a href="index.html" class="btn">시작 페이지로 돌아가기</a>
             </div>
         </div>
     </div>
