--- a/html/mbti_test_js.html
+++ b/html/mbti_test_js.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MBTI SIMPLE TEST</title>
     <!-- 외부 스타일시트 연결 -->
-<link rel="stylesheet" href="../css파일/mbti_test_js.css">
+<link rel="stylesheet" href="css/mbti_test_js.css">
 </head>
 <body>
     <!-- 메인 컨테이너 시작 -->
@@ -13,12 +13,12 @@
         <!-- 네비게이션 바 시작 -->
         <div class="navbar">
             <div class="navbar-left">
-                <img src="../image/Logo_image.png" alt="DSU MBTI 로고" class="logo">
+                <img src="image/Logo_image.png" alt="DSU MBTI 로고" class="logo">
             </div>
             <div class="navbar-center">
                 <ul class="nav-menu">
-                    <li><a href="../html파일/index.html">Home</a></li>
-                    <li><a href="../html파일/mbti_test_js.html">Result</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="mbti_test_js.html">Result</a></li>
                     <li><a href="" id="update_yet">About MBTI</a></li>
                 </ul>
         </div>
@@ -41,6 +41,6 @@
         </div>
 </div>
 <!-- 메인 컨테이너 끝 -->
-<script src="../js파일/mbti_test.js"></script>
+<script src="js/mbti_test.js"></script>
 </body>
 </html>
