안닫힌 div요소 발견 및 수정, 오타 수정

--- a/html/index.html
+++ b/html/index.html
@@ -31,10 +31,11 @@
             <img class="left-content" src="image/index.png" alt="MBTI 지표">
             <!-- 우측 메인 콘텐츠 -->
             <div class="right-content">
-                <h1>Find your MBTI<br>in munuites!</h1>
+                <h1>Find your MBTI<br>in minutes!</h1>
                 <p>Know yourself better.</p>
-            <!-- START 버튼 -->
-            <button id="start-btn">START</button>
+                <!-- START 버튼 -->
+                <button id="start-btn">START</button>
+            </div>
         </div>
     </div>
 <!-- 메인 컨테이너 끝 -->
