레이아웃 세부 조정, 폰트 사이즈 수정

--- a/html/mbti_result_fail_js.html
+++ b/html/mbti_result_fail_js.html
@@ -33,7 +33,7 @@
         <div class="right-content">
             <div class="information">
                 <h2>테스트를 아직<br>완료하지 않았습니다.</h2>
-                <p> 결과를 확인하시려면 테스트를 먼저 완료하셔야 합니다.</p>
+                <p> 결과를 확인하시려면 테스트를<br> 먼저 완료하셔야 합니다.</p>
             </div>
             <div class="button-wrap">
                 <a href="mbti_test_js.html" class="btn" id="resumeBtn">하던 질문지로 돌아가기</a>
