--- a/html/mbti_result_js.html
+++ b/html/mbti_result_js.html
@@ -38,6 +38,7 @@
             <div class="button-wrap">
                 <a href="index.html" class="btn-home">Home</a>
             </div>
+        </div>
     </div>
 <!-- 메인 컨테이너 끝 -->
 <script src="js/mbti_result.js"></script>
