코드 최적화

--- a/html/mbti_test_js.html
+++ b/html/mbti_test_js.html
@@ -18,7 +18,7 @@
             <div class="navbar-center">
                 <ul class="nav-menu">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="mbti_test_js.html">Result</a></li>
+                    <li><a href="mbti_test_js.html" id="result-bool">Result</a></li>
                     <li><a href="" id="update_yet">About MBTI</a></li>
                 </ul>
         </div>
